# cs2-analytics

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  cs2-analytics-internship-project.md  pyproject.toml
.github/workflows/: dashboard-refresh.yml
.planning/: FUTURE_WORK_PLAN.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  V2_PLAN.md
airflow/: Dockerfile  docker-compose.yml
airflow/dags/: cs2_daily_matches.py  cs2_dbt_run.py  cs2_tournament_sync.py  cs2_weekly_rankings.py  fail_intentionally.py
dashboard/: Home.py  __init__.py  export_snapshots.py
dashboard/lib/: __init__.py  ml.py  snowflake.py
dashboard/pages/: 1_Upset_Tracker.py  2_Hidden_Gem_Scout.py  3_Choke_Clutch_Profile.py
dashboard/snapshots/: mart_choke_profile.parquet  mart_hidden_gems.parquet  mart_upset_features.parquet
dbt_project/: .gitignore  dbt_project.yml  packages.yml
dbt_project/models/: sources.yml
dbt_project/setup/: snowflake_setup.sql
docs/: hltv_proxy_vps_runbook.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
ml/: MODEL_CARD.md  __init__.py  predict.py  train.py
scripts/: bootstrap_csapi.py  bootstrap_hltv_round_history.py  bootstrap_kaggle.py  deploy_hltv_proxy_vps.sh
tasks/: lessons.md  todo.md
tests/: conftest.py  test_base_client.py  test_bootstrap_csapi.py  test_bootstrap_hltv_round_history.py  test_config.py  test_csapi_client.py  test_dashboard_browser.py  test_dashboard_export.py  test_dashboard_helpers.py  test_dashboard_pages.py  test_deploy_hltv_proxy_vps.py  test_faceit_client.py  test_github_actions_workflows.py  test_hltv_round_history.py  test_kaggle.py  test_kaggle_ingester.py  test_liquipedia_client.py  test_models.py  test_modern_hidden_gems_sql.py  test_pandascore_client.py  test_parquet.py  test_project_metadata.py  test_s3.py  test_s3_utils.py  test_snowflake_setup_sql.py  test_valve_standings.py
tools/: fetch_hltv_mapstats.mjs  fetch_hltv_matches.mjs
(+120 files in other folders)
