[project]
name = "cs2-analytics"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "tenacity>=9.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyarrow>=16.0",
    "boto3>=1.35",
    "structlog>=24.0",
    "kaggle>=1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "boto3-stubs[s3]>=1.35",
    "apache-airflow>=2.9,<3.0",
    "apache-airflow-providers-slack==8.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cs2_analytics"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[dependency-groups]
dev = [
    "moto[s3]>=5.1.22",
]
